# quick3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.rst  azure-pipelines.yml  readthedocs.yml
docs/: Makefile  conf.py  index.rst  instructions.txt  requirements.txt
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  MainWindow.cpp  MainWindow.h  ThreeDWindow.cpp  ThreeDWindow.h  main.cpp
